--- a/template/campaign.html
+++ b/template/campaign.html
@@ -5,14 +5,14 @@
     <div class="ui-block-a"><div class="ui-bar ui-bar-a" >
         <div id="tab-campaign-twitter" class="ui-body-d ui-content">
             <form>
-                <label for="txtCampaignName" id="snTwitter">twitter</label>
-                <input type="text" name="txtCampaignName" id="txtCampaignName" value="{{ twitter.name if twitter != None else '' }}" placeholder="FirstFacebookCampaign">
-                <label for="txtCurrentPic">Image url:</label>
-                <input type="text" name="txtImageUrl" id="txtCurrentPic" value="{{ twitter.imgurl if twitter != None else '' }}" placeholder="No Image url">
-                <img name="imgCurrentPic" width="100px" height="100px" id="imgCurrentPic" src="{{ twitter.imgurl if twitter != None else '' }}">
-                <label for="txtCurrentUrl">Web url:</label>
-                <input type="text" name="txtUrl" id="txtCurrentUrl" value="{{ twitter.url if twitter != None else '' }}" placeholder="No url">
-                <iframe width="100px" height="100px" name="imgCurrentUrl" id="imgCurrentUrl" src="{{ twitter.url if twitter != None else '' }}">
+                <label for="txtCampaignNameTwitter" id="snTwitter">twitter</label>
+                <input type="text" name="txtCampaignName" id="txtCampaignNameTwitter" value="{{ twitter.name if twitter != None else '' }}" placeholder="FirstFacebookCampaign">
+                <label for="txtCurrentPicTwitter">Image url:</label>
+                <input type="text" name="txtImageUrl" id="txtCurrentPicTwitter" value="{{ twitter.imgurl if twitter != None else '' }}" placeholder="No Image url">
+                <img name="imgCurrentPic" width="100px" height="100px" id="imgCurrentPicsTwitter" src="{{ twitter.imgurl if twitter != None else '' }}">
+                <label for="txtCurrentUrlTwitter">Web url:</label>
+                <input type="text" name="txtUrl" id="txtCurrentUrlTwitter" value="{{ twitter.url if twitter != None else '' }}" placeholder="No url">
+                <iframe width="100px" height="100px" name="imgCurrentUrl" id="imgCurrentUrlTwitter" src="{{ twitter.url if twitter != None else '' }}">
                     </iframe>
 
                 <button id="savetwitter" class="ui-btn">Save</button>
@@ -25,14 +25,14 @@
 
     <div id="tab-campaign-facebook" class="ui-body-d ui-content">
     <form>
-        <label for="txtCampaignName" id="snTwitter">facebook</label>
-        <input type="text" name="txtCampaignName" id="txtCampaignName" value="{{ fb.name if fb != None else '' }}" placeholder="FirstFacebookCampaign">
-        <label for="txtCurrentPic">Image url:</label>
-        <input type="text" name="txtImageUrl" id="txtCurrentPic" value="{{ fb.imgurl if fb != None else '' }}" placeholder="No Image url">
-        <img name="imgCurrentPic" width="100px" height="100px" id="imgCurrentPic" src="{{ fb.imgurl if fb != None else '' }}">
-        <label for="txtCurrentUrl">Web url:</label>
-        <input type="text" name="txtUrl" id="txtCurrentUrl" value="{{ fb.url if fb != None else '' }}" placeholder="No url">
-        <iframe width="100px" height="100px" name="imgCurrentUrl" id="imgCurrentUrl" src="{{ fb.url if fb != None else '' }}">
+        <label for="txtCampaignNameFb" id="snFb">facebook</label>
+        <input type="text" name="txtCampaignName" id="txtCampaignNameFb" value="{{ fb.name if fb != None else '' }}" placeholder="FirstFacebookCampaign">
+        <label for="txtCurrentPicFb">Image url:</label>
+        <input type="text" name="txtImageUrl" id="txtCurrentPicFb" value="{{ fb.imgurl if fb != None else '' }}" placeholder="No Image url">
+        <img name="imgCurrentPic" width="100px" height="100px" id="imgCurrentPicFb" src="{{ fb.imgurl if fb != None else '' }}">
+        <label for="txtCurrentUrlFb">Web url:</label>
+        <input type="text" name="txtUrl" id="txtCurrentUrlFb" value="{{ fb.url if fb != None else '' }}" placeholder="No url">
+        <iframe width="100px" height="100px" name="imgCurrentUrl" id="imgCurrentUrlFb" src="{{ fb.url if fb != None else '' }}">
             </iframe>
 
         <button id="savefb" class="ui-btn">Save</button>
@@ -46,14 +46,14 @@
 
     <div id="tab-campaign-instagram" class="ui-body-d ui-content">
     <form>
-        <label for="txtCampaignName" id="snTwitter">Instagram</label>
-        <input type="text" name="txtCampaignName" id="txtCampaignName" value="{{ insta.name if insta != None else '' }}" placeholder="FirstFacebookCampaign">
-        <label for="txtCurrentPic">Image url:</label>
-        <input type="text" name="txtImageUrl" id="txtCurrentPic" value="{{ insta.imgurl if insta != None else '' }}" placeholder="No Image url">
-        <img name="imgCurrentPic" width="100px" height="100px" id="imgCurrentPic" src="{{ insta.imgurl if insta != None else '' }}">
-        <label for="txtCurrentUrl">Web url:</label>
-        <input type="text" name="txtUrl" id="txtCurrentUrl" value="{{ insta.url if insta != None else '' }}" placeholder="No url">
-        <iframe width="100px" height="100px" name="imgCurrentUrl" id="imgCurrentUrl" src="{{ insta.url if insta != None else '' }}">
+        <label for="txtCampaignNameInsta" id="snInsta">Instagram</label>
+        <input type="text" name="txtCampaignName" id="txtCampaignNameInsta" value="{{ insta.name if insta != None else '' }}" placeholder="FirstFacebookCampaign">
+        <label for="txtCurrentPicInsta">Image url:</label>
+        <input type="text" name="txtImageUrl" id="txtCurrentPicInsta" value="{{ insta.imgurl if insta != None else '' }}" placeholder="No Image url">
+        <img name="imgCurrentPic" width="100px" height="100px" id="imgCurrentPicInsta" src="{{ insta.imgurl if insta != None else '' }}">
+        <label for="txtCurrentUrlInsta">Web url:</label>
+        <input type="text" name="txtUrl" id="txtCurrentUrlInsta" value="{{ insta.url if insta != None else '' }}" placeholder="No url">
+        <iframe width="100px" height="100px" name="imgCurrentUrl" id="imgCurrentUrlInsta" src="{{ insta.url if insta != None else '' }}">
             </iframe>
 
         <button id="saveinsta" class="ui-btn">Save</button>
